[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Story" type="Label" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 976.0
margin_bottom = 474.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 3 )
text = "Story will go here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 20
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 816.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )

[node name="Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 836.0
margin_right = 909.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonText" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 929.0
margin_top = 5.0
margin_right = 976.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 5 )
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "an adverb", "an adjective" )
story = "Once upon a time someone called %s ate a %s flavored sandwhich which made him feel all %s inside and it was %s"

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "an adverb", "a color" )
story = "There once lived a man called %s who lived in a %s size room which made them sligthly %s and %s"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
